Ajustes para que funcione el monitoreo y levante kafka correctamente
Ajustes

--- a/opensky-kafka-keda/consumidor/keda-opensky-consumer-scaler.yaml
+++ b/opensky-kafka-keda/consumidor/keda-opensky-consumer-scaler.yaml
@@ -16,7 +16,7 @@ spec:
   triggers:
   - type: kafka
     metadata:
-      bootstrapServers: opensky-cluster-kafka-bootstrap.opensky.svc:9092
+      bootstrapServers: opensky-cluster-kafka-bootstrap.kafka.svc:9092
       consumerGroup: opensky-consumers
       topic: flight-states
       lagThreshold: "100"
