--- a/opensky-kafka-keda/kubernetes/kafka-cluster copy.yaml
+++ b/opensky-kafka-keda/kubernetes/kafka-cluster copy.yaml
@@ -3,12 +3,10 @@ kind: Kafka
 metadata:
   name: opensky-cluster
   namespace: kafka
-  annotations:
-    strimzi.io/use-standalone-zookeeper: "true"
 spec:
   kafka:
     version: 3.9.0
-    replicas: 3
+    replicas: 1
     listeners:
       - name: plain
         port: 9092
@@ -23,11 +21,11 @@ spec:
         type: nodeport
         tls: false
     config:
-      offsets.topic.replication.factor: 3
-      transaction.state.log.replication.factor: 3
-      transaction.state.log.min.isr: 2
-      default.replication.factor: 3
-      min.insync.replicas: 2
+      offsets.topic.replication.factor: 1
+      transaction.state.log.replication.factor: 1
+      transaction.state.log.min.isr: 1
+      default.replication.factor: 1
+      min.insync.replicas: 1
       inter.broker.protocol.version: "3.9"
     storage:
       type: jbod
@@ -39,9 +37,7 @@ spec:
   zookeeper:
     replicas: 1
     storage:
-      type: persistent-claim
-      size: 5Gi
-      deleteClaim: false          
+      type: ephemeral         
   entityOperator:
     topicOperator: {}
     userOperator: {}
